--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Connexion{% endblock %}
 
 {% block body %}
 <form method="post">
@@ -10,25 +10,80 @@
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_security_logout') }}">Se déconnecter</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
+    <label for="inputPassword">Mot de Passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
     <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
 
     <div class="checkbox mb-3">
         <label>
-            <input type="checkbox" name="_remember_me"> Remember me
+            <input type="checkbox" name="_remember_me"> Se souvenir de moi
         </label>
     </div>
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        Connectez-vous !
     </button>
+
+   {#<div class="container-fluid vh-100" style="margin-top:100px">
+        {% if error %}
+            <div class="mx-auto mb-2 alert alert-danger justify-content-center col-md-8 col-sm-12 shadow-lg p-2" role="alert">
+                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            </div>
+        {% endif %}
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success mt-4">
+                {{ message }}
+            </div>
+        {% endfor %}
+
+        <div>
+            <div class="rounded d-flex justify-content-center">
+                <div class="col-md-4 col-sm-12 shadow-lg p-5 bg-light">
+                    <div class="text-center">
+                        <h3 class="text-primary">Se connecter</h3>
+                    </div>
+                    <form action="{{ path('app_security_login') }}" method="post">
+                        <div class="p-4">
+                            <div class="input-group mb-3">
+                                    <span class="input-group-text bg-primary">
+                                        <i class="icon-person text-white"></i></span>
+                                <input type="email" class="form-control" placeholder="exemple@gmail.com" name="_username" value="{{ last_username }}">
+                            </div>
+                            <div class="input-group mb-3">
+                                    <span class="input-group-text bg-primary">
+                                        <i class="icon-vpn_key text-white"></i></span>
+                                <input type="password" class="form-control" placeholder="password" name="_password">
+                            </div>
+                            <div class="input-group mb-3">
+                                    <span class="input-group-text bg-primary">
+                                        <i class="icon-vpn_key text-white"></i></span>
+                                <input type="hidden" class="form-control" placeholder="csrf_token" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Se souvenir de moi
+                                </label>
+                            </div>
+                            <button class="btn btn-primary text-center mt-2" type="submit">
+                                Se connecter
+                            </button>
+                            <p class="text-center mt-5">Pas encore membre?
+                                <span class="text-primary">S'inscrire</span>
+                            </p>
+                            <p class="text-center text-primary">Mot de passe oublié?</p>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>#}
 </form>
 {% endblock %}
