--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -34,7 +34,7 @@
 
      <main class="main"><!--Hero section!-->
         <section id="hero" class="hero section dark-background">
-            <img src="assets/images/eau.jpg" alt data-aos="fade-in" class="aos-init aos-animate">
+            <img src="{{ asset('images/mains.jpg') }}" alt data-aos="fade-in" class="aos-init aos-animate">
                 <div class="container text-center aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
@@ -56,7 +56,7 @@
             <div class="container">
                 <div class="row gy-3">
                     <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-                        <img src="#" alt class="img-fluid">
+                        <img src="{{ asset('images/sourire.jpg')}}" alt class="img-fluid">
                     </div>
 
                     <div class="col-lg-6 d-flex flex-column justify-content-center aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
