creation controller+templates+modif base.html.twig&index.html.twig

--- a/templates/type_plainte/index.html.twig
+++ b/templates/type_plainte/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}Hello TypePlainteController!{% endblock %}
 
 {% block body %}
 
