--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -33,6 +33,7 @@
     </div>#}
 
      <main class="main"><!--Hero section!-->
+        {# <section class="fade-in">...</section> #}
         <section id="hero" class="hero section dark-background">
             <img src="{{ asset('images/mains.jpg') }}" alt data-aos="fade-in" class="aos-init aos-animate">
                 <div class="container text-center aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
@@ -47,6 +48,7 @@
             </img>
         </section>
 
+        <section class="about" data-aos="fade-up" data-aos-delay="200">...</section>
         <section id="A propos" class="A propos section">
             <div class="container section-title aos-init aos-animate" data-aos="fade-up">
                 <h2>A propos</h2>
@@ -131,145 +133,229 @@
             </div><!-- End Card Item -->
         </section>
 
-      <section id="Nos services" class="services-section">
-        <div class="container section-title aos-init aos-animate" data-aos="fade-up">
-          <h2>Nos Services</h2>
-          <p>Ce que nous vous apportons</p>
-        </div>
+        <!---Section Services!-->
+        <section id="Nos services" class="services-section">
+          <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+            <h2>Nos Services</h2>
+            <p>Ce que nous vous apportons</p>
+          </div>
 
-        <div class="container">
-          <div class="row g-5">
-              <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-              <div class="service-item item-cyan position-relative">
-                <i class="bi bi-activity icon"></i>
+          <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+                <div class="service-item item-cyan position-relative">
+                  <i class="bi bi-activity icon"></i>
+                  <div>
+                    <h3>Assistance</h3>
+                    <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+                    <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+
+            <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+              <div class="service-item item-orange position-relative">
+                <i class="bi bi-broadcast icon"></i>
                 <div>
-                  <h3>Assistance</h3>
-                  <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+                  <h3>Contrôle qualité</h3>
+                  <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+                  <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+                </div>
+              </div>
+            </div><!-- End Service Item -->
+
+            <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+              <div class="service-item item-teal position-relative">
+                <i class="bi bi-easel icon"></i>
+                <div>
+                  <h3>Service clientèle</h3>
+                  <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
                   <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
                 </div>
               </div>
             </div>
 
-          <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item item-orange position-relative">
-              <i class="bi bi-broadcast icon"></i>
-              <div>
-                <h3>Contrôle qualité</h3>
-                <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
-                <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+            <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
+              <div class="service-item item-red position-relative">
+                <i class="bi bi-bounding-box-circles icon"></i>
+                <div>
+                  <h3>Réparation des Fuites</h3>
+                  <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
+                  <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+                </div>
               </div>
             </div>
-          </div><!-- End Service Item -->
 
-          <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item item-teal position-relative">
-              <i class="bi bi-easel icon"></i>
-              <div>
-                <h3>Service clientèle</h3>
-                <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
-                <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+            <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
+              <div class="service-item item-indigo position-relative">
+                <i class="bi bi-calendar4-week icon"></i>
+                <div>
+                  <h3>Conseils et Astuces</h3>
+                  <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
+                  <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-item item-red position-relative">
-              <i class="bi bi-bounding-box-circles icon"></i>
-              <div>
-                <h3>Réparation des Fuites</h3>
-                <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-                <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
-            <div class="service-item item-indigo position-relative">
-              <i class="bi bi-calendar4-week icon"></i>
-              <div>
-                <h3>Conseils et Astuces</h3>
-                <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
-                <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="600">
-            <div class="service-item item-pink position-relative">
-              <i class="bi bi-chat-square-text icon"></i>
-              <div>
-                <h3>Informations</h3>
-                <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
-                <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+            <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="600">
+              <div class="service-item item-pink position-relative">
+                <i class="bi bi-chat-square-text icon"></i>
+                <div>
+                  <h3>Informations</h3>
+                  <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
+                  <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-    <section id="faq" class="faq section">
+      <section id="faq" class="faq section">
+
+        <!-- Section Title -->
+        <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+          <h2>FAQ</h2>
+          <p></p>
+        </div><!-- End Section Title -->
+
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-10 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+              <div class="faq-container">
+                <div class="faq-item faq-active">
+                  <h3>Comment déposer une plainte ?</h3>
+                  <div class="faq-content">
+                    <p>Il vous suffit de cliquer sur le bouton "déposer une plainte" et compléter le formulaire.</p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div>
+
+                <div class="faq-item">
+                  <h3>Comment suivre ma plainte introduite ?</h3>
+                  <div class="faq-content">
+                    <p>Il vous suffit d'introduire votre code de suivi sur la barre de recherche qui vous permettra de suivre l'état de votre plainte.</p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div>
+
+                <div class="faq-item">
+                  <h3>Dolor sit amet consectetur adipiscing elit pellentesque?</h3>
+                  <div class="faq-content">
+                    <p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis</p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div><!-- End Faq item-->
+
+                <div class="faq-item">
+                  <h3>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h3>
+                  <div class="faq-content">
+                    <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div><!-- End Faq item-->
+
+                <div class="faq-item">
+                  <h3>Tempus quam pellentesque nec nam aliquam sem et tortor?</h3>
+                  <div class="faq-content">
+                    <p>Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in</p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div><!-- End Faq item-->
+
+                <div class="faq-item">
+                  <h3>Perspiciatis quod quo quos nulla quo illum ullam?</h3>
+                  <div class="faq-content">
+                    <p>Enim ea facilis quaerat voluptas quidem et dolorem. Quis et consequatur non sed in suscipit sequi. Distinctio ipsam dolore et.</p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <section id="contact" class="contact section">
 
       <!-- Section Title -->
       <div class="container section-title aos-init aos-animate" data-aos="fade-up">
-        <h2>FAQ</h2>
-        <p></p>
+        <h2>Contact</h2>
+        <p>Vous souhaitez nous contacter pour en savoir plus sur nous ? Remplissez le formulaire ci-dessous et nous nous ferons le plaisir de vous répondre dans le plus bref délai.</p>
       </div><!-- End Section Title -->
 
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-10 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-            <div class="faq-container">
-              <div class="faq-item faq-active">
-                <h3>Comment déposer une plainte ?</h3>
-                <div class="faq-content">
-                  <p>Il vous suffit de cliquer sur le bouton "déposer une plainte" et compléter le formulaire.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
+      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
 
-              <div class="faq-item">
-                <h3>Comment suivre ma plainte introduite ?</h3>
-                <div class="faq-content">
-                  <p>Il vous suffit d'introduire votre code de suivi sur la barre de recherche qui vous permettra de suivre l'état de votre plainte.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
+        <div class="row gy-4">
 
-              <div class="faq-item">
-                <h3>Dolor sit amet consectetur adipiscing elit pellentesque?</h3>
-                <div class="faq-content">
-                  <p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
+          <div class="col-lg-5">
 
-              <div class="faq-item">
-                <h3>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h3>
-                <div class="faq-content">
-                  <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+            <div class="info-wrap">
+              <div class="info-item d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+                <i class="bi bi-geo-alt flex-shrink-0"></i>
+                <div>
+                  <h3>Adresse</h3>
+                  <p>565 Avenue de la Justice, Kinshasa/Gombe, R.D.C</p>
                 </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
+              </div><!-- End Info Item -->
 
-              <div class="faq-item">
-                <h3>Tempus quam pellentesque nec nam aliquam sem et tortor?</h3>
-                <div class="faq-content">
-                  <p>Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in</p>
+              <div class="info-item d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                <i class="bi bi-telephone flex-shrink-0"></i>
+                <div>
+                  <h3>Appelez-nous</h3>
+                  <p>+243 852 675 684</p>
                 </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
+              </div><!-- End Info Item -->
 
-              <div class="faq-item">
-                <h3>Perspiciatis quod quo quos nulla quo illum ullam?</h3>
-                <div class="faq-content">
-                  <p>Enim ea facilis quaerat voluptas quidem et dolorem. Quis et consequatur non sed in suscipit sequi. Distinctio ipsam dolore et.</p>
+              <div class="info-item d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
+                <i class="bi bi-envelope flex-shrink-0"></i>
+                <div>
+                  <h3>Envoyez-nous un Email</h3>
+                  <p>contact@regideso.com</p>
                 </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
+              </div><!-- End Info Item -->
+
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
+
+          <div class="col-lg-7">
+            <form action="forms/contact.php" method="post" class="php-email-form aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+              <div class="row gy-4">
+
+                <div class="col-md-6">
+                  <label for="name-field" class="pb-2">Votre Nom</label>
+                  <input type="text" name="name" id="name-field" class="form-control" required="">
+                </div>
+
+                <div class="col-md-6">
+                  <label for="email-field" class="pb-2">Votre Adresse Email</label>
+                  <input type="email" class="form-control" name="email" id="email-field" required="">
+                </div>
+
+                <div class="col-md-12">
+                  <label for="subject-field" class="pb-2">Sujet</label>
+                  <input type="text" class="form-control" name="subject" id="subject-field" required="">
+                </div>
+
+                <div class="col-md-12">
+                  <label for="message-field" class="pb-2">Message</label>
+                  <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
+                </div>
+
+                <div class="col-md-12 text-center">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Votre message a été envoyé. Merci!</div>
+
+                  <button type="submit">Envoyer Message</button>
+                </div>
+              </div>
+            </form>
+          </div><!-- End Contact Form -->
         </div>
       </div>
-    </section>
+        </div>
+      </div>
+    </section></section>
+      </section>
     </main>
 {% endblock %}
