modif app.js+home/index.html.twig&base.html.twig+servicesController+contactController

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -147,8 +147,8 @@
                   <i class="bi bi-activity icon"></i>
                   <div>
                     <h3>Assistance</h3>
-                    <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
-                    <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+                    <p>Un accompagnement personnalisé pour chaque plainte.</p>
+                    <a href="service-details.html" class="read-more stretched-link">Lire plus <i class="bi bi-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -158,7 +158,7 @@
                 <i class="bi bi-broadcast icon"></i>
                 <div>
                   <h3>Contrôle qualité</h3>
-                  <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+                  <p>Nous contrôlons et analysons la qualité et la potabilité de votre eau.</p>
                   <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
                 </div>
               </div>
@@ -169,7 +169,7 @@
                 <i class="bi bi-easel icon"></i>
                 <div>
                   <h3>Service clientèle</h3>
-                  <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
+                  <p>Nos équipes s'occupent de vous et s'attelent à vous apporter la meilleure solution à votre réclamation.</p>
                   <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
                 </div>
               </div>
