--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+        <link rel="stylesheet" href="{{ asset('assets/styles/app.css') }}">
+        <script src="{{ asset('assets/js/main.js') }}"></script>
 
         {% block stylesheets %}
         {% endblock %}
